# proving-ground

./: .envrc  .envrc.local  .gitignore  README.md  Vagrantfile  pyproject.toml
.ansible/: ansible.cfg  requirements.yml
centos6/: Vagrantfile
centos7/: Vagrantfile
chat-with-gpt/: README.md  config.yaml.example  docker-compose.yaml
debian9/: Vagrantfile
debian9/ansible/: site.yml
docker/: Vagrantfile
eks-a/: Vagrantfile
eks-d/: Vagrantfile
eks-d/ansible/: bootstrap.yml  site.yml
glusterfs/: Vagrantfile
haproxy/: Vagrantfile
k8s/: README.md  Vagrantfile  kubeconfig.source
k8s/ansible/: kubernetes.yml  site.yml  worker.yml
k8s/yamls/: daemonset_with_rolling_update_strategy.yml  downward_api_pod_fields.yml  kaniko.yml  secret_as_file.yml
ldap/: Vagrantfile
mysql/: Vagrantfile
php-fpm/: Vagrantfile
ubuntu1604/: Vagrantfile
ubuntu1804/: Vagrantfile
ubuntu1804/ansible/: site.yml
ubuntu2004/: Vagrantfile
ubuntu2004/ansible/: bootstrap.yml  site.yml
ubuntu2104/: Vagrantfile
ubuntu2104/ansible/: site.yml
webserver/: Vagrantfile
