[project]
name = "cc.chroni.proving-ground"
version = "1.0.0"
description = "Proving ground for application deployments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible",
    "docker",
    "pywinrm",
]

[dependency-groups]
dev = [
    "ansible-lint",
    "molecule",
    "molecule-docker",
    "pre-commit",
]

